<resources>
    <string name="app_name">Mama</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_rememberMe">Remember Me</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Menu Creation -->
    <string-array name="menu_period_array">
        <item>daily</item>
        <item>weekly</item>
        <item>monthly</item>
    </string-array>
    <string name="label_menuName">Name</string>
    <string name="label_menuDesc">Description</string>
    <string name="label_menuPeriod">Period</string>
    <string name="label_menuPeriodF" formatted="false">Period: %s</string>
    <string name="label_menuRecIds">Recipes</string>

    <!-- Recipe Creation -->
    <string name="title_recipe">Recipe Name</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_tags">Tags</string>
    <string name="title_directions">How To?</string>
    <string name="button_submit_recipe">Submit</string>
    <string name="button_edit_recipe">Save Changes</string>
    <string-array name="ingredient_units">
        <item>--</item>
        <item>kg</item>
        <item>lt</item>
    </string-array>

    <!-- Recipe Detail -->
    <string name="title_nutrition">Nutritions</string>
    <string-array name="prompt_nutritions">
        <item>kCal: %.1f</item>
        <item>Carbs: %.1f</item>
        <item>Fats: %.1f</item>
        <item>Proteins: %.1f</item>
        <item>Sodium: %.1f</item>
        <item>Fiber: %.1f</item>
        <item>Chol: %.1f</item>
        <item>Sugar: %.1f</item>
        <item>Iron: %.1f</item>
    </string-array>
    <string name="button_consume">Save this recipe as consumed if you tried it out</string>
    <string name="button_consumed_before">You consumed this recipe before</string>

    <!-- Profile -->
    <string name="title_fullName">Name</string>
    <string name="title_location">Location</string>
    <string name="title_dateOfBirth">Birth Date</string>
    <string name="prompt_fullName">No Name?</string>
    <string name="prompt_location">No Location?</string>
    <string name="prompt_dateOfBirth">No Birth Date?</string>
    <string name="button_action_myRecipes">My Recipes</string>
    <string name="button_action_createRecipes">Create Recipe</string>
    <string name="button_statistics">See Your Statistics</string>
    <string name="prompt_containsAllergen">ALLERGEN</string>

    <!-- Profile Edit -->
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>

    <!-- Menu -->
    <string name="action_menu_settings">Settings</string>
    <string name="action_menu_logout">Logout</string>
    <string name="action_menu_edit">Edit</string>
    <string name="action_menu_add">Add</string>
    <string name="title_menu_feeds">Feeds</string>
    <string name="title_menu_profile">Profile</string>
    <string name="title_menu_search">Search</string>
    <string name="title_menu_menu">Create Menu</string>
    <string name="title_menu_stats">Statistics</string>
    <string name="title_menu_search_preferences">Search Preferences</string>
    <string name="title_menu_profileEdit">Update Profile</string>
    <string name="title_menu_recipeCreation">Create Recipe</string>
    <string name="title_menu_recipeDetail">Recipe Detail</string>
    <string name="title_menu_menuDetail">Menu Detail</string>
    <string name="title_menu_myRecipe">My Recipes</string>
    <string name="title_menu_signup">Sign up</string>

    <!-- Stats -->
    <string name="label_stats">Statistics</string>
    <string name="label_nutritients">Nutritients</string>
    <string name="label_dailyAverage">Daily Consumption</string>
    <string name="label_consumed">Consumed Recipes</string>
    <string name="label_allergies">My Allergies</string>

    <!-- Comment Rating -->
    <string name="prompt_makeComment">Write Comment…</string>

    <!-- SearchPreferences -->
    <string name="button_searchAdvancedEnabled">Advanced Search Enabled</string>
    <string name="title_searchPrefsCheckRecipe">Search Recipes:</string>
    <string name="title_searchPrefsCheckMenu">Search Menus:</string>
    <string name="title_searchPrefsPeriod">Period:</string>
    <string name="title_searchPrefsIncludedIng">Included Ingredients:</string>
    <string name="title_searchPrefsExcludedIng">Excluded Ingredients:</string>
    <string name="hint_searchPrefsIngredients">Should be separated by commas</string>
    <string-array name="title_searchPreferences">
        <item>Min Rating:</item>
        <item>Max Rating:</item>

        <item>Min Calories:</item>
        <item>Max Calories:</item>

        <item>Min Carbs:</item>
        <item>Max Carbs:</item>

        <item>Min Fats:</item>
        <item>Max Fats:</item>

        <item>Min Protein:</item>
        <item>Max Protein:</item>

        <item>Min Sodium:</item>
        <item>Max Sodium:</item>

        <item>Min Fiber:</item>
        <item>Max Fiber:</item>

        <item>Min Chol:</item>
        <item>Max Chol:</item>

        <item>Min Sugar:</item>
        <item>Max Sugar:</item>

        <item>Min Iron:</item>
        <item>Max Iron:</item>
    </string-array>
</resources>
