<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/profileEdit_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:id="@+id/profile_emailHolder"
                style="@style/HolderLinear"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_style" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_email" />

                <EditText
                    android:id="@+id/profileEdit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_passwordHolder"
                style="@style/HolderLinear"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_style" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_password" />

                <EditText
                    android:id="@+id/profileEdit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_nameHolder"
                style="@style/HolderLinear"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:background="@drawable/border_style" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_fullName" />

                <EditText
                    android:id="@+id/profileEdit_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="textPersonName"
                    android:background="@android:color/transparent"
                    android:hint="@string/prompt_fullName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_locationHolder"
                style="@style/HolderLinear"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_location" />

                <EditText
                    android:id="@+id/profileEdit_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:hint="@string/prompt_location" />

            </LinearLayout>

            <LinearLayout
                style="@style/HolderLinear"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/title_dateOfBirth" />

                <EditText
                    android:id="@+id/profileEdit_dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:textColor="@color/black"
                    android:inputType="date"
                    android:hint="@string/prompt_dateOfBirth" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>