<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/transparent" >


    <RelativeLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_centerInParent="true"
        android:background="@android:color/transparent" >

        <android.support.design.widget.TextInputLayout android:id="@+id/widget_userNameHolder"
            android:layout_width="match_parent" android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userEmail"
                style="@style/CustomEditText"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/widget_passwordHolder"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/widget_userNameHolder"  >

            <EditText
                android:id="@+id/password"
                style="@style/CustomEditText"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/widget_fullNameHolder"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/widget_passwordHolder"  >

            <EditText
                android:id="@+id/fullname"
                style="@style/CustomEditText"
                android:hint="Full Name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/widget_locationHolder"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/widget_fullNameHolder"  >

            <EditText
                android:id="@+id/location"
                style="@style/CustomEditText"
                android:hint="Location"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:id="@+id/widget_dateOfBirthHolder"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_below="@+id/widget_locationHolder"  >

            <EditText
                android:id="@+id/dateOfBirth"
                style="@style/CustomEditText"
                android:hint="Date Of Birth"
                android:focusable="false"
                android:inputType="date" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/text_isRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignBaseline="@+id/checkBox_isRestaurant"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="Are you a restaurant?"
            android:layout_below="@+id/widget_dateOfBirthHolder" />

        <CheckBox
            android:id="@+id/checkBox_isRestaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/text_isRestaurant"
            android:layout_below="@+id/widget_dateOfBirthHolder" />

        <Button
            android:id="@+id/button_signUp"
            style="@style/CustomButton"
            android:text="@string/action_sign_up_short"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/widget_dateOfBirthHolder" />



    </RelativeLayout>
</RelativeLayout>